fix savedContainer visibility issues, add ScrollTrigger for start of gallery

--- a/styles.scss
+++ b/styles.scss
@@ -48,6 +48,7 @@ $radius: 5px;
 body, html {
     @include flex(column, center, center);
     font-family: $neueKabelFont;
+    background-color: $purple;
 }
 
 #savedContainer {
@@ -57,6 +58,11 @@ body, html {
     right: 0;
     height: 5%;
     z-index: 1000;
+    &.visible {
+        display: block;
+        opacity: 1;
+        visibility: visible;
+    }
     #savedImgs {
         z-index: 1000;
         background-color: #e4c1fb;
@@ -100,27 +106,51 @@ body, html {
         display: none;
         transition: all 0.1s cubic-bezier(0.16, 1, 0.5, 1);
         transform: translateY(0.5rem);
-        li {
-            @include flex(column, center, center);
-            column-gap: $gap;
-            padding: 0.8rem 1rem;
-            text-decoration: none;
-            font-weight: 400;
-            color: $lightText;
+        ol {
+            padding: 25px;
+            display: none;
+            opacity: 0;
+            transform: translateY(-20px);
+            transition: all 0.3s;
+            &.visible {
+                display: block;
+                opacity: 1;
+                transform: translateY(0px)
+            }
+            li {
+                @include flex(column, center, center);
+                column-gap: $gap;
+                padding: 0.8rem 1rem;
+                text-decoration: none;
+                font-weight: 400;
+                color: $lightText;
+            }
         }
+        
 
     }
 }
 
 #galleryTitle {
     @include flex(row, center, center);
-    height: 35vh;
+    height: 100vh;
     width: 100vw;
     font-size: 5rem;
     font-weight: 600;
     text-align: center;
     color: $lightText;
     margin-bottom: 25vh;
+}
+
+.vector-container {
+    height: 100vh;
+    width: 100vw;
+    @include flex(row, center, center);
+    .decrepit-vector {
+        width: 90vw;
+        height: auto;
+        padding-bottom: 50vh;
+    }
 }
 
 #imageGalleryContainer {
